@@ -57,10 +57,22 @@
  Dark correction processing is now done on the entire image instead of 
  line by line. Also, performed some clean up and new commentary.
  M.D. De La Pena, 2019 November 26:
- Remove hard-coded darkscaling value and read new post-flashed and
- unflashed columns from updated CCDTAB reference file. 
+ Removed hard-coded darktime scaling value and read new 
+ post-flashed and unflashed columns from updated CCDTAB reference 
+ file to use for the offset to the DARKTIME FITS keyword value 
+ under appropropriate date and supported subarray criteria.  The 
+ DARKTIME keyword value is now the default scaling factor for the 
+ superdarks, with the offset being an additive correction to DARKTIME 
+ under appropriate circumstances.
  
  */
+static const char *subApertures[] = {"WFC1A-2K", "WFC1B-2K", "WFC2C-2K", "WFC2D-2K",
+                                     "WFC1A-1K", "WFC1B-1K", "WFC2C-1K", "WFC2D-1K",
+                                     "WFC1A-512", "WFC1B-512", "WFC2C-512", "WFC2D-512",
+                                     "WFC1-IRAMPQ", "WFC1-MRAMPQ", "WFC2-ORAMPQ",
+                                     "WFC1-POL0UV", "WFC1-POL0V", 
+                                     "WFC1-SMFL"};
+static const int numSupportedSubApertures = sizeof(subApertures) / sizeof(subApertures[0]);
 
 int doDark (ACSInfo *acs2d, SingleGroup *x, float *meandark) {
   
@@ -72,8 +84,6 @@ int doDark (ACSInfo *acs2d, SingleGroup *x, float *meandark) {
   
   extern int status;
 
-  //const float darkscaling = 3.0;  /* Extra idle time */
-  
   int extver = 1;	/* get this imset from dark image */
 
   /* Assumption is the science and dark images are the same size and bin factor */
@@ -86,7 +96,9 @@ int doDark (ACSInfo *acs2d, SingleGroup *x, float *meandark) {
   double mean;      /* mean value for the image */
   double weight;    /* weight value for the image (No. good pixels/all pixels) */
   int update;
-  float darktime;
+  float darktimeFromHeader;  /* base darktime value based upon FITS keyword DARKTIME from image header */
+  float darktime;        /* final darktime value after applicable offset, if any */
+  float darktimeOffset;  /* overhead offset time (s) based upon full-frame/subarray and post-flashed/unflashed */
   
   int DetCCDChip (char *, int, int, int *);
 
@@ -101,19 +113,64 @@ int doDark (ACSInfo *acs2d, SingleGroup *x, float *meandark) {
   scicols = x->sci.data.nx;
   scirows = x->sci.data.ny; 
 
-  /* Compute DARKTIME */
-  /* SBC does not have FLASH keywords */
-  if (acs2d->detector == MAMA_DETECTOR)
-     darktime = acs2d->exptime;
-  else {
-     darktime = acs2d->exptime + acs2d->flashdur;
+  /* Get the DARKTIME FITS keyword value stored in the ACSInfo structure */
+  darktimeFromHeader = (float)acs2d->darktime;
 
-     /* Post-SM4 non-BIAS WFC only */
-     /* TARGNAME unavailable, assume EXPTIME=0 means BIAS */
-     if (acs2d->detector == WFC_CCD_DETECTOR && acs2d->expstart > SM4MJD && acs2d->exptime > 0)
-        darktime += darkscaling;
+  /*
+     The overhead offset time is a function of full-frame vs subarray and post-flash vs unflashed 
+     and has been determined empirically for CCD data.  The appropriate overhead for full-frame or
+     subarray was extracted from the calibration file during the table read.
+  */
+
+  /* Unflashed observation */
+  darktimeOffset = acs2d->overhead_unflashed;
+ 
+  /* Post-flashed observation */
+  if ((acs2d->flashdur > 0.0) && (strcmp(acs2d->flashstatus, "SUCCESSFUL") == 0)) {
+        darktimeOffset = acs2d->overhead_postflashed;
   }
-  
+
+  sprintf(MsgText, "Darktime from header: %f Exp: %f FlashDur: %f darktimeOffset: %f\n", darktimeFromHeader, acs2d->exptime,
+      acs2d->flashdur, darktimeOffset);
+  trlmessage(MsgText);
+
+  /* 
+     Compute the final darktime based upon the date of full-frame or subarray data.
+     The full-frame overhead offset is applicable to all data post-SM4.  The subarray 
+     overhead offset is applicable to all data post-CYCLE24 and only for supported
+     subarrays. 
+  */
+  darktime = darktimeFromHeader;  /* Default */
+  if (acs2d->detector != MAMA_DETECTOR) {
+
+     /* Full-frame data */
+     if (acs2d->subarray == NO) {
+         if (acs2d->expstart >= SM4MJD)
+              darktime = darktimeFromHeader + darktimeOffset;
+
+         sprintf(MsgText, "Full Frame darktime: %f\n", darktime);
+         trlmessage(MsgText);
+
+     /* Subarray data */
+     } else {
+         if (acs2d->expstart >= CYCLE24) {
+             for (unsigned int i = 0; i < numSupportedSubApertures; i++) {
+                 if (strcmp(acs2d->aperture, subApertures[i]) == 0) {
+                     darktime = darktimeFromHeader + darktimeOffset;
+                     sprintf(MsgText, "Supported Subarray darktime: %f aperture: %s\n", darktime, subApertures[i]);
+                     trlmessage(MsgText);
+                     break;
+                 }
+                 sprintf(MsgText, "Supported Subarray aperture: %s\n", subApertures[i]);
+                 trlmessage(MsgText);
+             }
+         }
+     }
+  }
+        
+  sprintf(MsgText, "Final darktime: %f", darktime);
+  trlmessage(MsgText);
+
   /* Compute correct extension version number to extract from
      reference image to correspond to CHIP in science data.
   */
