@@ -171,6 +171,10 @@ int     dimy      i: number of lines in exposure
 		    sprintf (MsgText, "Row %d of CCDTAB is DUMMY.", row);
 			trlwarn (MsgText);
 		}
+      
+        /* Read the overhead time (s) for post-flashed and unflashed observations */
+        acs->overhead_postflashed = tabrow.overhead_postflashed;
+        acs->overhead_unflashed = tabrow.overhead_unflashed;
 
 		for (i = 0; i < NAMPS; i++){
 			/* If the amp is used, keep the value, otherwise set to zero*/
@@ -192,7 +196,14 @@ int     dimy      i: number of lines in exposure
 		acs->ampx = (tabrow.ampx > dimx) ? dimx : tabrow.ampx;
 		acs->ampy = tabrow.ampy;		
 		acs->saturate = tabrow.saturate;
-		break;
+		//break;
+	    sprintf (MsgText, "Matching row FOUND in CCDTAB `%s'.", acs->ccdpar.name);
+        trlmessage(MsgText);
+		sprintf (MsgText, "CCDAMP %s, CCDGAIN %4.1f, CCDOFFST %d,%d,%d,%d, OVERHEADPOST %f OVERHEADUN %f",
+		acs->ccdamp, acs->ccdgain, acs->ccdoffset[0], acs->ccdoffset[1],
+		acs->ccdoffset[2], acs->ccdoffset[3], acs->overhead_postflashed, acs->overhead_unflashed);
+        trlmessage(MsgText);
+        break;
 	    }
 	}
 
